Revert "BUGFIX [31661]: Contrast Issues: Who-is-online text-color on background (#3796)"
This reverts commit 59a77f9f619e2f6669369cac919e23cf29dc7451.

--- a/templates/default/less/Services/Awareness/delos.less
+++ b/templates/default/less/Services/Awareness/delos.less
@@ -2,16 +2,12 @@
 
 .ilAwarenessDropDown .popover {
 	max-width: 300px;
-	color: @il-text-color;
+	color: black;
 	min-width: 250px;
 }
 
 #awareness-list {
 	overflow: auto;
-	.dropdown-header {
-		background-color: @il-main-dark-bg;
-		margin-bottom: 0px;
-	}
 }
 
 .ilAwarenessDropDown .popover-content {
@@ -34,7 +30,7 @@
 		display: table;
 	}
 	.media:hover {
-		background-color: @il-highlight-bg;
+		background-color: #fea;
 	}
 	.glyphicon {
 		font-size: inherit;
@@ -58,8 +54,8 @@
 }
 
 .ilAwarenessItem {
-	border-bottom: 1px solid @il-main-border-color;
-	background-color:  @il-main-bg;
+	border-bottom: 1px solid #e9e9e9;
+	background-color:  @il-main-dark-bg;
 
 	> div[role='button']:focus-visible {
 		outline: @il-focus-outline;
@@ -86,7 +82,7 @@
 }
 
 #awareness-content .media-body h4, #awareness-content .media-body p {
-	color: @il-text-light-color;
+	color: #a0a0a0;
 	font-size: 12px;
 	padding: 5px 3px 0 3px;
 	line-height: 1em;
@@ -95,7 +91,7 @@
 
 #awareness-content .media-body h4 {
 	padding-top: 0px;
-	color: @il-text-color;
+	color: #606060;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
@@ -108,11 +104,11 @@
 }
 
 #awareness-content .dropdown-menu a {
-	color: @il-text-light-color;
+	color: #606060;
 }
 
 #awareness-content .dropdown-menu a:hover {
-	color: @il-text-hover-color;
+	color: #202020;
 }
 
 #awareness-content .arrow-down {
@@ -188,7 +184,7 @@
 
 #awareness-content .ilHighlighted {
 	background-color: @il-highlight-bg;
-	color: @il-text-light-color;
+	color: #606060;
 }
 
 .ilAwrnBadgeHidden {
